# LuciferIL

./: CMakeLists.txt  README.md
CMake/: DevIL.cmake  FreeImage.cmake  STB.cmake
Example/: Build.sh  CMakeLists.txt  Example.cpp
Lucifer/: CMakeLists.txt
Lucifer/CMake/: DevIL.cmake
Lucifer/Lucifer/: Lucifer.h  Lucifer_EnumToString.cpp  Lucifer_LoadingStatusEnum.h  Lucifer_STBLoadImage.h
LuciferIL/: CMakeLists.txt
LuciferIL/CMake/: DevIL.cmake
LuciferIL/LuciferIL/: Lucifer.cpp  Lucifer.h  Lucifer_EnumToLogLevel.cpp  Lucifer_EnumToLogLevel.h  Lucifer_EnumToString.cpp  Lucifer_EnumToString.h  Lucifer_FreeImageLoadImage.cpp  Lucifer_FreeImageLoadImage.h  Lucifer_ImageFormatEnum.h  Lucifer_ImageFormatenum.h  Lucifer_ImageStruct.cpp  Lucifer_ImageStruct.h  Lucifer_ImageUtils.cpp  Lucifer_ImageUtils.h  Lucifer_IncludeOnce.cpp  Lucifer_IncludeOnce.h  Lucifer_LoadImage.cpp  Lucifer_LoadImage.h  Lucifer_LoadImageDevIL.cpp  Lucifer_LoadImageDevIL.h  Lucifer_LoadImageFreeImage.cpp  Lucifer_LoadImageFreeImage.h  Lucifer_LoadImageSTB.cpp  Lucifer_LoadImageSTB.h  Lucifer_LoadingStatusEnum.cpp  Lucifer_STBLoadImage.cpp  Lucifer_WriteImage.cpp  Lucifer_WriteImage.h
NeoIL/: CMakeLists.txt
NeoIL/CMake/: STB.cmake
NeoIL/NeoIL/: NeoIL.cpp  NeoIL.h  NeoIL_EnumToLogLevel.cpp  NeoIL_EnumToLogLevel.h  NeoIL_EnumToString.cpp  NeoIL_EnumToString.h  NeoIL_FreeImageLoadImage.cpp  NeoIL_FreeImageLoadImage.h  NeoIL_ImageStruct.cpp  NeoIL_ImageStruct.h  NeoIL_LoadingStatusEnum.cpp  NeoIL_LoadingStatusEnum.h  NeoIL_STBLoadImage.cpp  NeoIL_STBLoadImage.h  NeoIL_StatusEnum.cpp  NeoIL_StatusEnum.h
Tests/CompileTest/: .gitignore  Build.sh  BuildTest.sh  CMakeLists.txt  Main.cpp
Tests/LoadingTest/: Build.sh  CMakeLists.txt  Main.cpp
Tests/WritingTest/: Build.sh  Main.cpp
Tools/: BuildTests.sh  CleanTests.sh  Install.sh
