cmake_minimum_required(VERSION 3.5)
project(NeoILCompileTest)


# Define CMake Paths
set(BIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Binaries")

# Set Binary Dir
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BIN_DIR} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BIN_DIR} )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BIN_DIR} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set(CMAKE_INSTALL_PREFIX ${BIN_DIR})

# Include NeoIL
include_directories(../..)


# Build Executable
add_executable(${ProjectName} ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp)
target_link_libraries(${ProjectName} NeoIL)